--- a/CSE169/CSE169.xcodeproj/xcshareddata/xcschemes/CSE169.xcscheme
+++ b/CSE169/CSE169.xcodeproj/xcshareddata/xcschemes/CSE169.xcscheme
@@ -56,6 +56,10 @@
             isEnabled = "YES">
          </CommandLineArgument>
          <CommandLineArgument
+            argument = "tube.skel"
+            isEnabled = "NO">
+         </CommandLineArgument>
+         <CommandLineArgument
             argument = "test2.skel"
             isEnabled = "NO">
          </CommandLineArgument>
