Skin Finished ver_0.2
Added Inline argument setting

--- a/CSE169/CSE169.xcodeproj/xcshareddata/xcschemes/CSE169.xcscheme
+++ b/CSE169/CSE169.xcodeproj/xcshareddata/xcschemes/CSE169.xcscheme
@@ -53,7 +53,15 @@
       <CommandLineArguments>
          <CommandLineArgument
             argument = "wasp.skel"
-            isEnabled = "YES">
+            isEnabled = "NO">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "test.skel"
+            isEnabled = "NO">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "wasp.skin"
+            isEnabled = "NO">
          </CommandLineArgument>
          <CommandLineArgument
             argument = "tube.skel"
